@@ -1,5 +1,6 @@
 v0.9 - Pending
 	+ Ability to open remote images (http and ftp)
+	+ Preference for opening hidden files
 
 v0.8.3 - January 17, 2007
 	+ Use F11 for fullscreen like most applications
